ci: finalise release 2.11.0
Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: Jonas Bulcke <127748878+jobulcke@users.noreply.github.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
Co-authored-by: Yalz <Yalz@users.noreply.github.com>